2005-04-22  Sergey Poznyakoff  <gray@Mirddin.farlep.net>

	* Makefile.am (SUBDIRS): Add po/
	* configure.ac (AC_CONFIG_FILES): Add po/Makefile.in.
	* build-aux/bootstrap: Take into account autopoint
	* build-aux/gnulib.modules (gettext): New module
	* src/Makefile.am (AM_CPPFLAGS): New variable

	* src/c.l: Add gettext markers
	* src/cflow.h: Likewise
	* src/main.c: Likewise
	* src/output.c: Likewise
	* src/parser.c: Likewise
	* src/rc.c: Likewise
	* src/symbol.c: Likewise

	* .cvsignore: New file
	* po/.cvsignore: New file
	* build-aux/.cvsignore: Updated
	* po/Makevars: New file
	* po/POTFILES.in: New file
	
2005-04-22  Sergey Poznyakoff  <gray@Mirddin.farlep.net>

	cflow dubbed a GNU package and moved to savannah.
	
	* README-alpha (Checking Out the Sources): Updated the
	instructions.
	* README: Minor fix.
	* configure.ac: Changed bug report address.

2005-03-22  Sergey Poznyakoff  <gray@Mirddin.farlep.net>

	* lib/argcv.c: Imported from mailutils
	* lib/argcv.h: Imported from mailutils
	* lib/Makefile.tmpl: Added argcv
	* src/cflow.rc: New file
	* src/Makefile.am: Distribute cflow.rc
	(chart.cflow): New rule
	* src/c.l (CFLOW_PREPROC): Moved to cflow.h
	(set_preprocessor): Accept NULL arg
	* src/cflow.h (CFLOW_PREPROC): New define
	(set_preprocessor,pp_option,print_level): New prototypes
	(level_mark): Type changed to unsigned char.
	* src/main.c (ignore_indentation): Renamed to use_indentation,
	sense reverted. All callers updated
	New options: --cpp, alias to --preprocess.
	--no-cpp, disables preprocessing
	* src/output.c (level_mark): Type changed to unsigned char.
	
	* src/rc.c: Rewritten using argcv
	* src/parser.c (ignore_indentation): Renamed to use_indentation,
	sense reverted. All callers updated

2005-03-22  Sergey Poznyakoff  <gray@Noldor.runasimi.org>

	* TODO: Updated
	* src/c.l (canonical_filename): New global
	(update_loc): New function
	(source): Invoke preprocessor if necessary
	(yywrap): Stop preprocessor if necessary