@@ -22,8 +22,8 @@
 
 @copying
 Published by the Free Software Foundation,
-59 Temple Place - Suite 330
-Boston, MA 02111-1307, USA
+51 Franklin Street, Fifth Floor
+Boston, MA 02110-1301, USA
 
 Copyright @copyright{} 2005 Sergey Poznyakoff
 
