@@ -90,7 +90,7 @@ Please send broken links and other corrections (or suggestions) to
 
 <p>
 Copyright (C) 2005 Free Software Foundation, Inc.,
-59 Temple Place - Suite 330, Boston, MA 02111, USA
+51 Franklin Street, Fifth Floor, Boston, MA 02111, USA
 <br />
 Verbatim copying and distribution of this entire article is
 permitted in any medium, provided this notice is preserved.
